// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package packager

import (
	"bytes"
	"encoding/binary"
	"io/ioutil"
	"log"
	"net/http"
	"net/http/httptest"
	"net/textproto"
	"net/url"
	"sort"
	"strings"
	"testing"

	"github.com/WICG/webpackage/go/signedexchange"
	"github.com/ampproject/amppackager/packager/rtv"
	rpb "github.com/ampproject/amppackager/transformer/request"
	"github.com/julienschmidt/httprouter"
	"github.com/pkg/errors"
	"github.com/stretchr/testify/suite"
)

// TODO(twifkak): Move these globals into PackagerSuite.

var httpURL, httpsURL string
var httpsClient *http.Client

var fakeBody = []byte("They like to OPINE. Get it? (Is he fir real? Yew gotta be kidding me.)")
var transformedBody = []byte("<html><head></head><body>They like to OPINE. Get it? (Is he fir real? Yew gotta be kidding me.)</body></html>")
var lastRequestURL string

// Don't override this manually; use replacingFakeHandler() instead.
var fakeHandler = func(w http.ResponseWriter, req *http.Request) {
	lastRequestURL = req.URL.String()
	w.Header().Set("Content-Type", "text/html; charset=utf-8")
	w.Write(fakeBody)
}

func fetchURL(serverURL string) *url.URL {
	u, err := url.Parse(serverURL)
	if err != nil {
		log.Panic("parsing server url:", err)
	}
	u.Path = "/amp/secret-life-of-pine-trees.html"
	return u
}

func signURL(serverURL string) *url.URL {
	u := fetchURL(serverURL)
	u.Scheme = "https"
	return u

}

func replacingFakeHandler(newFake func(w http.ResponseWriter, req *http.Request), testCode func()) {
	oldFake := fakeHandler
	defer func() { fakeHandler = oldFake }()
	fakeHandler = newFake
	testCode()
}

func newPackager(t *testing.T, urlSets []URLSet) *Packager {
	return newPackagerShouldPackage(t, urlSets, true)
}

func newPackagerShouldPackage(t *testing.T, urlSets []URLSet, shouldPackage bool) *Packager {
	handler, err := NewPackager(certs[0], key, urlSets, &rtv.RTVCache{}, func() bool { return shouldPackage }, nil, true)
	if err != nil {
		t.Fatal(errors.WithStack(err))
	}
	// Accept the self-signed certificate generated by the test server.
	handler.client = httpsClient
	return handler
}

func boolPtr(x bool) *bool       { return &x }
func stringPtr(x string) *string { return &x }

func headerNames(headers http.Header) []string {
	names := make([]string, len(headers))
	i := 0
	for name := range headers {
		names[i] = strings.ToLower(name)
		i++
	}
	sort.Strings(names)
	return names
}

type PackagerSuite struct {
	suite.Suite
	httpServer, tlsServer *httptest.Server
}

func (this *PackagerSuite) get(t *testing.T, handler AlmostHandler, target string) *http.Response {
	return this.getP(t, handler, target, httprouter.Params{})
}

func (this *PackagerSuite) getP(t *testing.T, handler AlmostHandler, target string, params httprouter.Params) *http.Response {
	return getHP(t, handler, target, http.Header{"AMP-Cache-Transform": {"google"}, "Accept": {"application/signed-exchange;v=b2"}}, params)
}

func (this *PackagerSuite) TestSimple() {
	urlSets := []URLSet{{
		Sign:  &URLPattern{[]string{"https"}, "", signURL(httpURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, nil},
		Fetch: &URLPattern{[]string{"http"}, "", fetchURL(httpURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, boolPtr(true)},
	}}
	resp := this.get(this.T(), newPackager(this.T(), urlSets),
		"/priv/doc?fetch="+url.QueryEscape(fetchURL(httpURL).String())+"&sign="+url.QueryEscape(signURL(httpURL).String()))
	this.Assert().Equal(http.StatusOK, resp.StatusCode, "incorrect status: %#v", resp)

	exchange, err := signedexchange.ReadExchange(resp.Body)
	this.Require().NoError(err)
	this.Assert().Equal("/amp/secret-life-of-pine-trees.html", lastRequestURL)
	this.Assert().Equal(signURL(httpURL).String(), exchange.RequestURI.String())
	this.Assert().Equal(http.Header{":method": []string{"GET"}}, exchange.RequestHeaders)
	this.Assert().Equal(200, exchange.ResponseStatus)
	this.Assert().Equal([]string{"content-encoding", "content-length", "content-security-policy", "content-type", "date", "digest"}, headerNames(exchange.ResponseHeaders))
	this.Assert().Equal("text/html", exchange.ResponseHeaders.Get("Content-Type"))
	// The response header values are untested here, as that is covered by signedexchange tests.

	// For small enough bodies, the only thing that MICE does is add a record size prefix.
	var payloadPrefix bytes.Buffer
	binary.Write(&payloadPrefix, binary.BigEndian, uint64(miRecordSize))
	this.Assert().Equal(append(payloadPrefix.Bytes(), transformedBody...), exchange.Payload)
}

func (this *PackagerSuite) TestNoFetchParam() {
	urlSets := []URLSet{{
		Sign: &URLPattern{[]string{"https"}, "", signURL(httpsURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, nil}}}
	resp := this.get(this.T(), newPackager(this.T(), urlSets), "/priv/doc?sign="+url.QueryEscape(signURL(httpsURL).String()))
	this.Assert().Equal(http.StatusOK, resp.StatusCode, "incorrect status: %#v", resp)

	exchange, err := signedexchange.ReadExchange(resp.Body)
	this.Require().NoError(err)
	this.Assert().Equal("/amp/secret-life-of-pine-trees.html", lastRequestURL)
	this.Assert().Equal(signURL(httpsURL).String(), exchange.RequestURI.String())
}

func (this *PackagerSuite) TestSignAsPathParam() {
	urlSets := []URLSet{{
		Sign: &URLPattern{[]string{"https"}, "", signURL(httpsURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, nil},
	}}
	resp := this.getP(this.T(), newPackager(this.T(), urlSets), `/priv/doc/`, httprouter.Params{httprouter.Param{"signURL", "/" + signURL(httpsURL).String()}})
	this.Assert().Equal(http.StatusOK, resp.StatusCode, "incorrect status: %#v", resp)

	exchange, err := signedexchange.ReadExchange(resp.Body)
	this.Require().NoError(err)
	this.Assert().Equal("/amp/secret-life-of-pine-trees.html", lastRequestURL)
	this.Assert().Equal(signURL(httpsURL).String(), exchange.RequestURI.String())
}

func (this *PackagerSuite) TestRemovesLinkHeaders() {
	urlSets := []URLSet{{
		Sign: &URLPattern{[]string{"https"}, "", signURL(httpsURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, nil}}}
	resp := this.get(this.T(), newPackager(this.T(), urlSets), "/priv/doc?sign="+url.QueryEscape(signURL(httpsURL).String()))
	this.Assert().Equal(http.StatusOK, resp.StatusCode, "incorrect status: %#v", resp)

	exchange, err := signedexchange.ReadExchange(resp.Body)
	this.Require().NoError(err)
	this.Assert().NotContains(exchange.ResponseHeaders, textproto.CanonicalMIMEHeaderKey("Link"))
}

func (this *PackagerSuite) TestErrorNoCache() {
	urlSets := []URLSet{{
		Fetch: &URLPattern{[]string{"http"}, "", fetchURL(httpURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, boolPtr(true)},
	}}
	// Missing sign param generates an error.
	resp := this.get(this.T(), newPackager(this.T(), urlSets), "/priv/doc?fetch="+url.QueryEscape(fetchURL(httpURL).String()))
	this.Assert().Equal(http.StatusBadRequest, resp.StatusCode, "incorrect status: %#v", resp)
	this.Assert().Equal("no-store", resp.Header.Get("Cache-Control"))
}

func (this *PackagerSuite) TestProxyUnsignedIfRedirect() {
	urlSets := []URLSet{{
		Sign: &URLPattern{[]string{"https"}, "", signURL(httpsURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, nil},
	}}
	replacingFakeHandler(func(w http.ResponseWriter, req *http.Request) {
		w.Header().Set("Content-Type", "text/html; charset=utf-8")
		w.Header().Set("Cookie", "yum yum yum")
		w.Header().Set("Location", "/login")
		w.WriteHeader(301)
	}, func() {
		resp := this.get(this.T(), newPackager(this.T(), urlSets), "/priv/doc?sign="+url.QueryEscape(signURL(httpsURL).String()))
		this.Assert().Equal(301, resp.StatusCode)
		this.Assert().Equal("", resp.Header.Get("cookie"))
		this.Assert().Equal("/login", resp.Header.Get("location"))
	})
}

func (this *PackagerSuite) TestProxyUnsignedIfNotModified() {
	urlSets := []URLSet{{
		Sign: &URLPattern{[]string{"https"}, "", signURL(httpsURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, nil},
	}}
	replacingFakeHandler(func(w http.ResponseWriter, req *http.Request) {
		w.Header().Set("Content-Type", "text/html; charset=utf-8")
		w.Header().Set("Cache-control", "private")
		w.Header().Set("Cookie", "yum yum yum")
		w.Header().Set("ETag", "superrad")
		w.WriteHeader(304)
	}, func() {
		resp := this.get(this.T(), newPackager(this.T(), urlSets), "/priv/doc?sign="+signURL(httpsURL).String())
		this.Assert().Equal(304, resp.StatusCode)
		this.Assert().Equal("private", resp.Header.Get("cache-control"))
		this.Assert().Equal("", resp.Header.Get("cookie"))
		this.Assert().Equal("superrad", resp.Header.Get("etag"))
	})
}

func (this *PackagerSuite) TestProxyUnsignedIfShouldntPackage() {
	urlSets := []URLSet{{
		Sign: &URLPattern{[]string{"https"}, "", signURL(httpsURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, nil},
	}}
	resp := this.get(this.T(), newPackagerShouldPackage(this.T(), urlSets, false), "/priv/doc?sign="+signURL(httpsURL).String())
	this.Assert().Equal(http.StatusOK, resp.StatusCode, "incorrect status: %#v", resp)
	body, err := ioutil.ReadAll(resp.Body)
	this.Require().NoError(err)
	this.Assert().Equal(fakeBody, body, "incorrect body: %#v", resp)
}

func (this *PackagerSuite) TestProxyUnsignedIfMissingTransformHeader() {
	urlSets := []URLSet{{
		Sign: &URLPattern{[]string{"https"}, "", signURL(httpsURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, nil},
	}}
	resp := get(this.T(), newPackager(this.T(), urlSets), "/priv/doc?sign="+url.QueryEscape(signURL(httpsURL).String()))
	this.Assert().Equal(http.StatusOK, resp.StatusCode, "incorrect status: %#v", resp)
	body, err := ioutil.ReadAll(resp.Body)
	this.Require().NoError(err)
	this.Assert().Equal(fakeBody, body, "incorrect body: %#v", resp)
}

func (this *PackagerSuite) TestProxyUnsignedErrOnStatefulHeader() {
	urlSets := []URLSet{URLSet{
		Sign: &URLPattern{[]string{"https"}, "", signURL(httpsURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), true, nil},
	}}
	replacingFakeHandler(func(w http.ResponseWriter, req *http.Request) {
		w.Header().Set("Content-Type", "text/html; charset=utf-8")
		w.Header().Set("Set-Cookie", "chocolate chip")
		w.Header().Set("Content-Type", "text/html")
		w.WriteHeader(200)
	}, func() {
		resp := this.get(this.T(), newPackager(this.T(), urlSets), "/priv/doc?sign="+signURL(httpsURL).String())
		this.Assert().Equal(200, resp.StatusCode)
		this.Assert().Equal("chocolate chip", resp.Header.Get("Set-Cookie"))
		this.Assert().Equal("text/html", resp.Header.Get("Content-Type"))
	})
}

func (this *PackagerSuite) TestProxyUnsignedNonCachable() {
	urlSets := []URLSet{URLSet{
		Sign: &URLPattern{[]string{"https"}, "", signURL(httpsURL).Host, stringPtr("/amp/.*"), []string{}, stringPtr(""), false, nil},
	}}
	replacingFakeHandler(func(w http.ResponseWriter, req *http.Request) {
		w.Header().Set("Content-Type", "text/html; charset=utf-8")
		w.Header().Set("Cache-Control", "no-store")
		w.Header().Set("Content-Type", "text/html")
		w.WriteHeader(200)
	}, func() {
		resp := this.get(this.T(), newPackager(this.T(), urlSets), "/priv/doc?sign="+signURL(httpsURL).String())
		this.Assert().Equal(200, resp.StatusCode)
		this.Assert().Equal("no-store", resp.Header.Get("Cache-Control"))
		this.Assert().Equal("text/html", resp.Header.Get("Content-Type"))
	})
}

func (this *PackagerSuite) SetupSuite() {
	// Mock out example.com endpoint.
	this.httpServer = httptest.NewServer(http.HandlerFunc(func(w http.ResponseWriter, req *http.Request) {
		fakeHandler(w, req)
	}))
	httpURL = this.httpServer.URL

	this.tlsServer = httptest.NewTLSServer(http.HandlerFunc(func(w http.ResponseWriter, req *http.Request) {
		fakeHandler(w, req)
	}))
	httpsURL = this.tlsServer.URL
	httpsClient = this.tlsServer.Client()
	// Configure the test httpsClient to have the same redirect policy as production.
	httpsClient.CheckRedirect = noRedirects

	// Don't actually do any transforms. Only parse & print.
	getTransformerRequest = func(r *rtv.RTVCache, s, u string) *rpb.Request {
		return &rpb.Request{Html: string(s), DocumentUrl: u, Config: rpb.Request_NONE}
	}
}

func (this *PackagerSuite) TearDownSuite() {
	this.httpServer.Close()
	this.tlsServer.Close()
}

func TestPackagerSuite(t *testing.T) {
	suite.Run(t, new(PackagerSuite))
}

// TODO(twifkak): Write lots more tests.
// TODO(twifkak): Fuzz-test.
